# Robotmaster-EP-AR-Navigation

./: .gitignore  AGENTS.md  AGENTS_CN.md  README.md  start_ros.bat
ROS-TCP-Connector/com.unity.robotics.ros-tcp-connector/Editor/: Unity.Robotics.ROSTCPConnector.Editor.asmdef
ROS-TCP-Connector/com.unity.robotics.ros-tcp-connector/Runtime/: Unity.Robotics.ROSTCPConnector.asmdef
ROS-TCP-Connector/com.unity.robotics.visualizations/Editor/: Unity.Robotics.Visualizations.Editor.asmdef
ROS-TCP-Connector/com.unity.robotics.visualizations/Runtime/: Unity.Robotics.Visualizations.asmdef
UnityProject/Assets/: WSATestCertificate.pfx
UnityProject/Assets/Editor/: ConsoleFix.cs  MRTK3AutoFix.cs  MRTKProfileDebugger.cs  MRTKProfileSetup.cs  MRTKProfileSetup.cs.disabled  MRTKProfileSetup.cs.meta.bak  MRTKSetup.cs
UnityProject/Assets/MRTK.Generated/: MRTKProfile.asset  MRTKSettings.asset  MRTKSyntheticHandsConfig.asset
UnityProject/Assets/Resources/: ROSConnectionPrefab.prefab
UnityProject/Assets/Scenes/: MainScene.unity
UnityProject/Assets/Scripts/: CarBuilder.cs  CarDirectionIndicator.cs  GoToGoal.cs  GroundBuilder.cs  MRTKInitializer.cs  (+11 more)
UnityProject/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
docs/: docker_setup.md  mrtk3_setup.md  play_mode_debug.md  unity_basics.md  unity_scripts_setup.md  xavier_setup.md
notes/: Unity_words.md  notes.md
ros1_ws/src/unity_bridge/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/unity_bridge/unity_bridge/: car_pose_subscriber.py
tmp/: log.md  manual_install_guide.md
(+4 files in other folders)
