<?xml version="1.0"?>
<package format="2">
  <name>unity_bridge</name>
  <version>0.0.1</version>
  <description>Bridge package for Unity ROS1 communication</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_tcp_endpoint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
